# Infosupport

./: CMakeLists.txt  README.md  SysInfo.rc
build-new/: CMakeCache.txt
cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Sources.cmake  SysInfo.slnx  SysInfo.vcxproj  SysInfo.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  imgui.ini  info-supportHCC.slnx  info-supportHCC.vcxproj
cmake/Debug/: imgui.ini
cmake/SysInfo.dir/Debug/: SysInfo.exe.recipe  SysInfo.res
cmake/SysInfo.dir/Debug/SysInfo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
cmake/info-supportHCC.dir/Debug/: info-supportHCC.exe.recipe
cmake/info-supportHCC.dir/Debug/info-supportHCC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  (+5 more)
cmake/info-supportHCC.dir/Release/: SysInfo.res  info-supportHCC.exe.recipe
include/: Application.h  System.h
include/graphics/: TextureLoader.cpp  TextureLoader.h
include/hardware/: DiskInfo.h  HardwareInfo.h
include/network/: NetworkInfo.h
include/printer/: PrinterInfo.h
include/system/: DomainInfo.h  MemoryInfo.h  OSInfo.h  Uptime.h
include/ui/: MainWindow.h
src/: application.cpp  main.cpp  system.cpp
src/network/: NetworkInfo.cpp
src/printer/: PrinterInfo.cpp
src/system/: DiskInfo.cpp  DomainInfo.cpp  HardwareInfo.cpp  MemoryInfo.cpp  OSInfo.cpp  Uptime.cpp
src/ui/: Gui.cpp
(+22 files in other folders)
